--- a/src/ReactTemplate/Components/UserInfo/UserInfo.css
+++ b/src/ReactTemplate/Components/UserInfo/UserInfo.css
@@ -1,21 +1,23 @@
-/* USER PROFILE */
+/* USER INFO */
 
-.user-profile {
+.user-info {
   display: grid;
+
   grid-template-columns: 150px 1fr;
+
   column-gap: 20px;
   row-gap: 20px;
 }
 
 /* PHOTO */
-.user-profile__photo {
+.user-info__photo {
   order: -1;
   grid-row: span 2;
   border: 1px dashed black;
 }
 
 /*  FULL NAME */
-.user-profile__full-name {
+.user-info__full-name {
   margin: 0;
   align-self: start;
 }
