--- a/src/ReactTemplate/Components/AboutList/AboutList.css
+++ b/src/ReactTemplate/Components/AboutList/AboutList.css
@@ -1,40 +1,40 @@
 /* ABOUT LIST */
 
-.about-list {
-    display: grid;
-    padding: 0;
-    margin: 0;
-    grid-template-columns: max-content 1fr;
-    column-gap: 10px;
-    row-gap: 10px;
-    align-items: end;
-  }
+.about-me-list {
+  display: grid;
+  padding: 0;
+  margin: 0;
+  grid-template-columns: max-content 1fr;
+  column-gap: 10px;
+  row-gap: 10px;
+  align-items: end;
+}
 
-  /* TERM */
+/* TERM */
 
-  .about-list__term {
-    padding: 0;
-    margin: 0;
-    font-size: 18px;
-  }
+.about-me-list__term {
+  padding: 0;
+  margin: 0;
+  font-size: 18px;
+}
 
-  /* DESCRIPTION */
+/* DESCRIPTION */
 
-  .about-list__description {
-    padding: 0;
-    margin: 0;
-    font-size: 18px;
-  }
+.about-me-list__description {
+  padding: 0;
+  margin: 0;
+  font-size: 18px;
+}
 
-  /* LINK */
+/* LINK */
 
-  .about-list__link {
-    color: inherit;
-  }
+.about-me-list__link {
+  color: inherit;
+}
 
-  /* LINK DISABLE */
+/* LINK DISABLE */
 
-  .about-list__link_disable {
-    text-decoration: none;
-    pointer-events: none;
-  }
+.about-me-list__link_disable {
+  text-decoration: none;
+  pointer-events: none;
+}
