--- a/src/Components/Logo/Logo.module.css
+++ b/src/Components/Logo/Logo.module.css
@@ -5,15 +5,16 @@
 
   font-size: 14px;
   font-weight: 700;
-  color: whitesmoke;
+  color: var(--white);
   text-align: center;
   text-decoration: none;
 }
 
 /* IMAGE */
 
-.logo__image {
+.image {
   width: 100%;
   height: 100%;
+
   object-fit: cover;
 }
