--- a/src/Components/Navigation/Navigation.module.css
+++ b/src/Components/Navigation/Navigation.module.css
@@ -7,12 +7,12 @@
 
   padding: 10%;
 
-  background-color: darkgreen;
+  background-color: var(--blue-light);
 }
 
 /* NAVIGATION LIST */
 
-.navigation__list {
+.list {
   display: grid;
 
   row-gap: 10px;
@@ -23,7 +23,7 @@
 
 /* NAVIGATION ITEM */
 
-.navigation__item {
+.item {
   list-style: none;
   font-size: 20px;
   line-height: 100%;
@@ -31,7 +31,7 @@
 
 /* NAVIGATION ITEM HIDDEN */
 
-.navigation__item_hidden {
+.item_hidden {
   height: 2em;
 
   visibility: hidden;
@@ -39,11 +39,11 @@
 
 /* NAVIGATION LINK */
 
-.navigation__link {
-  color: whitesmoke;
+.link {
+  color: var(--white);
   text-decoration: none;
 }
 
-.navigation__link_current-page {
+.link_currentPage {
   text-decoration: underline;
 }
