--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,38 @@
+:root {
+  --white-lightest: rgb(255, 255, 255);
+  --white-lighter: rgb(230, 230, 230);
+  --white: rgb(245, 245, 245);
+  --grey-lighter: rgb(224, 224, 224);
+  --grey-light: rgb(192, 192, 192);
+  --grey: rgb(128, 128, 128);
+  --blue-light: rgb(88, 115, 235);
+  --blue: rgb(47, 81, 233);
+  --violet-lighter: rgb(243, 184, 243);
+  --violet: rgb(155, 15, 236);
+  --black: rgb(0, 0, 0);
+}
+
+/* Класс временно заменяет отсутствующие фото нормально оформленным текстом */
+.fake-photo {
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+
+  background-color: var(--blue-light);
+
+  color: var(--white);
+  font-size: 12px;
+  text-align: center;
+}
+
 * {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
+
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -15,7 +44,12 @@ body {
 
 .visibility-hidden {
   position: absolute;
+  display: block;
+
+  overflow: hidden;
+
   width: 1;
   height: 1;
+
   clip: rect(0, 0, 0, 0);
 }
