1. Добавленн блок с Избранными брузьями 2. Доделана вкладка с чатом 3. Добавленны новые подкомпоненты: Кнопка, Заголовок секции, Заголовок подсекции

--- a/src/Components/AboutUser/AboutUser.module.css
+++ b/src/Components/AboutUser/AboutUser.module.css
@@ -16,6 +16,8 @@
 /* TERM */
 
 .term {
+  max-width: max-content;
+
   padding: 0;
   margin: 0;
 
@@ -25,6 +27,8 @@
 /* DESCRIPTION */
 
 .description {
+  max-width: max-content;
+
   padding: 0;
   margin: 0;
 
@@ -34,6 +38,8 @@
 /* LINK */
 
 .link {
+  max-width: max-content;
+
   color: inherit;
 }
 
