--- a/src/Components/Post/Post.module.css
+++ b/src/Components/Post/Post.module.css
@@ -4,7 +4,7 @@
   display: grid;
 
   grid-template-columns: min-content 1fr;
-  grid-template-rows: min-content 1fr;
+  grid-template-rows: repeat(2, min-content) 1fr;
 
   column-gap: 16px;
 
@@ -16,6 +16,8 @@
 /* AUTHOR */
 
 .author {
+  max-width: max-content;
+
   margin: 0;
   padding: 10px 0;
 
@@ -27,10 +29,10 @@
 .photo {
   order: -1;
 
-  grid-row: span 2;
+  grid-row: span 3;
 
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
 
   border-radius: 50%;
 }
@@ -40,9 +42,24 @@
 .content {
   align-self: start;
 
+  grid-column: 2;
+
+  max-width: max-content;
+
   margin: 0;
-  padding: 0 10px;
+  padding: 5px 10px;
 
   font-size: 18px;
+  color: var(--grey);
+}
+
+/* DATE TIME */
+
+.dateTime {
+  max-width: max-content;
+
+  padding: 5px;
+
+  font-size: 14px;
   color: var(--grey);
 }
