--- a/src/Components/Navigation/Navigation.module.css
+++ b/src/Components/Navigation/Navigation.module.css
@@ -7,6 +7,8 @@
 
   padding: 10%;
 
+  max-height: 500px;
+
   background-color: var(--blue-light);
 }
 
@@ -40,7 +42,7 @@
 /* NAVIGATION LINK */
 
 .link {
-  color: var(--white);
+  color: var(--white-lighter);
   text-decoration: none;
 }
 
