--- a/src/Components/Page/Page.module.css
+++ b/src/Components/Page/Page.module.css
@@ -7,10 +7,14 @@
   grid-template-rows: auto minmax(min-content, 550px) 1fr;
   grid-template-areas: "header header" "nav main" ". main";
 
+  grid-auto-flow: column dense;
+
   column-gap: 16px;
   row-gap: 16px;
 
-  margin: 0 5%;
+  margin: 0 auto;
+
+  max-width: 1560px;
 }
 
 /* HEADER */
@@ -29,6 +33,12 @@
 
 .main {
   grid-area: main;
+}
+
+/* LAST FRIENDS */
+
+.lastFriends {
+    max-height: max-content;
 }
 
 /* FOOTER */
