1. Изменение способа использования компонента Пост и кнопка 2. Добовление отдельного компонента для описания пользователя в профиле(Очень спорная идея) 3. Выделение пункта навигации в отдельный комопнент 4. Выделение диалога в отдельный компонент(изменение его обертки с button на li, чтобы отказать от такой вложенности)

--- a/src/Components/Dialog/Dialog.module.css
+++ b/src/Components/Dialog/Dialog.module.css
@@ -9,12 +9,9 @@
 
   align-items: center;
 
-  padding: 10px;
-
-  border: none;
-  border-radius: 0;
-
   background-color: var(--white-lighter);
+
+  list-style: none;
 
   filter: drop-shadow(1px 1px 1px var(--grey-lighter))
     drop-shadow(-1px -1px 1px var(--grey-lighter));
@@ -32,6 +29,8 @@
 /* FULL NAME */
 
 .fullName {
+  max-width: 100%;
+
   padding: 5px 10px;
 
   font-size: 18px;
