Добавление иконки для вкладки и переадресации по страницам 1. Добавление иконки для вкладки браузера 2. Подключание и начало развития переадресации по сайту    Это делается с помощью библиотеки react router dom и тегов    BrowserRouter, Route, Switch, NavLink и Link 3. Добавление фотографий-заглушек

--- a/src/Components/Dialogs/Dialog/Dialog.module.css
+++ b/src/Components/Dialogs/Dialog/Dialog.module.css
@@ -1,3 +1,14 @@
+/* LINK */
+
+.link {
+  display: block;
+  min-width: max-content;
+
+  text-decoration: none;
+}
+
+.linkActive {
+}
 /* DIALOG */
 
 .dialog {
@@ -9,6 +20,8 @@
 
   align-items: center;
 
+  min-width: 100%;
+
   background-color: var(--white-lighter);
 
   list-style: none;
@@ -19,7 +32,7 @@
   cursor: pointer;
 }
 
-.dialog_current {
+.linkActive .dialog_current {
   background-color: var(--grey-lighter);
 
   filter: drop-shadow(1px 1px 1px var(--grey-light))
