--- a/src/Components/Profile/Profile.module.css
+++ b/src/Components/Profile/Profile.module.css
@@ -10,8 +10,9 @@
 /* PICTURE */
 
 .image {
-  width: 100%;
-  min-height: 150px;
+  min-width: 100%;
+  max-height: 150px;
+  object-fit: cover;
 
   background-color: var(--violet-lighter);
 
