--- a/src/Components/Page/Page.module.css
+++ b/src/Components/Page/Page.module.css
@@ -5,16 +5,15 @@
 
   grid-template-columns: 200px 1fr;
   grid-template-rows: auto minmax(min-content, 550px) 1fr;
-  grid-template-areas: "header header" "nav main" ". main";
-
-  grid-auto-flow: column dense;
+  grid-template-areas: "header header" "nav main" "friends main";
 
   column-gap: 16px;
   row-gap: 16px;
 
   margin: 0 auto;
 
-  max-width: 1560px;
+  min-width: 1100px;
+  max-width: 1580px;
 }
 
 /* HEADER */
@@ -38,7 +37,8 @@
 /* LAST FRIENDS */
 
 .lastFriends {
-    max-height: max-content;
+  grid-area: friends;
+  max-height: max-content;
 }
 
 /* FOOTER */
