--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-
-
 :root {
   --white-lightest: rgb(255 255 255);
   --white-lighter: rgb(245 245 245);
@@ -48,12 +46,15 @@ body {
 
 .visibility-hidden {
   position: absolute;
+
   display: block;
 
   overflow: hidden;
 
-  width: 1;
-  height: 1;
+  width: 1px;
+  height: 1px;
+
+  margin: -1px;
 
   clip: rect(0, 0, 0, 0);
 }
