Добавление новых страниц и переработка старых 1. Добавление страницы регистрации и входа 2. Переработка страницы со списком друзей 3. Теперь чат не является списком сообщений(хотя может быть и зря) 4. Вынос данных в профиле и списке дрзей в отдельные массивы
Нужно сделать:
1. Вынести данные постов в отдельные массивы
2. Вынести данные новостей в отдельные массивы
3. Вынести сообщения в отдельные массивы
4. Возможно поднять массивы на уровень по иерархие выше(например в Page)

--- a/src/Components/Button/Button.module.css
+++ b/src/Components/Button/Button.module.css
@@ -1,20 +1,22 @@
 /* BUTTON */
 
 .button {
-  border-radius: 0;
-  border: none;
+    padding: 10px 20px;
 
-  background-color: var(--blue-light);
+    border-radius: 0;
+    border: none;
 
-  color: var(--white-lighter);
+    background-color: var(--blue-light);
 
-  filter: drop-shadow(1px 1px 1px var(--blue-lighter));
+    color: var(--white-lighter);
 
-  transition-property: background-color;
-  transition-timing-function: ease-in-out;
-  transition-duration: 0.15s;
+    filter: drop-shadow(1px 1px 1px var(--blue-lighter));
+
+    transition-property: background-color;
+    transition-timing-function: ease-in-out;
+    transition-duration: 0.15s;
 }
 
 .button:hover {
-  background-color: var(--blue);
+    background-color: var(--blue);
 }
