--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -4,16 +4,36 @@
   display: flex;
 
   align-items: center;
+  justify-content: space-between;
+
+  padding: 0 20px;
 
   min-height: 50px;
 
   background-color: var(--blue-light);
 }
 
-/* HEADER LOGO */
+/* LOGO */
 
 .logo {
-  margin-left: 20px;
-
   width: 120px;
+}
+
+/* AUTHORIZATION */
+
+.authorization {
+  font-size: 14px;
+  color: var(--white-lighter);
+}
+
+/* LINK */
+
+.link {
+  line-height: 1em;
+  text-decoration: none;
+  color: inherit;
+}
+
+.link:hover {
+  text-decoration: underline;
 }
