--- a/src/Components/Page/Page.module.css
+++ b/src/Components/Page/Page.module.css
@@ -4,8 +4,8 @@
   display: grid;
 
   grid-template-columns: 200px 1fr;
-  grid-template-rows: auto minmax(min-content, 550px) 1fr;
-  grid-template-areas: "header header" "nav main" "friends main";
+  grid-template-rows: auto minmax(min-content, 500px) min-content 1fr;
+  grid-template-areas: "header header" "nav main" "friends main" ". main";
 
   column-gap: 16px;
   row-gap: 16px;
