--- a/src/Components/UserInfo/UserInfo.module.css
+++ b/src/Components/UserInfo/UserInfo.module.css
@@ -1,33 +1,33 @@
 /* USER INFO */
 
 .userInfo {
-  display: grid;
+    display: grid;
 
-  grid-template-columns: 150px 1fr;
+    grid-template-columns: 150px 1fr;
 
-  column-gap: 20px;
-  row-gap: 20px;
+    column-gap: 20px;
+    row-gap: 20px;
 }
 
 /* PHOTO */
 .photo {
-  width: 100%;
-  min-height: 100%;;
-  object-fit: cover;
-  order: -1;
+    width: 150px;
+    height: 170px;
+    object-fit: cover;
+    order: -1;
 
-  grid-row: span 2;
+    grid-row: span 2;
 }
 
 /*  FULL NAME */
 .fullName {
-  align-self: start;
+    align-self: start;
 
-  font-size: 24px;
+    font-size: 24px;
 }
 
 /* ABOUT USER */
 
 .aboutUser {
-  margin: 0;
+    margin: 0;
 }
