--- a/src/Components/Like/Like.module.css
+++ b/src/Components/Like/Like.module.css
@@ -1,42 +1,56 @@
 /* ICON */
 
 .like {
-  position: relative;
+    position: relative;
 
-  display: inline-block;
+    display: inline-block;
 
-  padding-right: 2em;
+    padding-right: 2em;
 
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 1.5em;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 1.5em;
 }
 
 .like::after {
-  content: "";
+    content: "";
 
-  position: absolute;
+    position: absolute;
 
-  right: 0;
+    right: 0;
 
-  display: inline-block;
+    display: inline-block;
 
-  width: 1.5em;
-  height: 1.5em;
+    width: 1.5em;
+    height: 1.5em;
 
-  font-size: inherit;
-  line-height: 1.5em;
+    font-size: inherit;
+    line-height: 1.5em;
 
-  background-image: url("like.svg");
-  background-size: 1.5em;
-  background-repeat: no-repeat;
+    background-image: url("like.svg");
+    background-size: 1.5em;
+    background-repeat: no-repeat;
 }
 /* INPUT */
 
 .input {
-  display: block;
+    display: block;
 }
 
 .input:checked ~ .like::after {
-  background-position: 0 -1.5em;
+    background-position: 0 -1.5em;
+    animation-name: scale;
+    animation-duration: 0.5s;
+}
+
+@keyframes scale {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.3);
+    }
+    to {
+        transform: scale(1);
+    }
 }
