Добавление данных и рендер-функции для форм 1. Вынос рендера форм в отдельную функцию 2. Вынос данных форм в объект data 3. data теперь не Map, а обычный объект 4. Информация о пользователяъ перенесена в Map, который является частью объекта data 5. Оптимизация иконки чекбокса

--- a/src/Components/Forms/Checkbox/Checkbox.module.css
+++ b/src/Components/Forms/Checkbox/Checkbox.module.css
@@ -37,6 +37,7 @@
     background-image: url("./checkbox.svg");
     background-position: 0 1px;
     background-repeat: no-repeat;
+    background-size: 24px auto;
 }
 
 .input:checked ~ .label::before {
