--- a/src/Components/Forms/Registration/Registration.module.css
+++ b/src/Components/Forms/Registration/Registration.module.css
@@ -11,8 +11,11 @@
 /* HEADER */
 
 .header {
-    justify-self: center;
+    grid-column: span 2;
 
+    width: 100%;
+
+    text-align: center;
 }
 
 /* FORM */
