--- a/src/Components/Post/Post.module.css
+++ b/src/Components/Post/Post.module.css
@@ -1,75 +1,85 @@
 /* POST */
 
 .post {
-  display: grid;
+    display: grid;
 
-  grid-template-columns: min-content 1fr;
-  grid-template-rows: repeat(2, min-content) 1fr;
+    grid-template-columns: min-content 1fr;
+    grid-template-rows: repeat(2, min-content) 1fr;
 
-  column-gap: 16px;
+    column-gap: 16px;
 
-  border: 1px solid var(--grey-light);
+    border: 1px solid var(--grey-light);
 
-  padding: 15px 20px;
+    padding: 15px 20px;
+}
+
+/* AUTHOR */
+
+.authorLink {
+    max-width: max-content;
+
+    margin: 0;
+    padding: 10px 0;
+
+    font-size: 20px;
+    text-decoration: none;
+    color: inherit;
 }
 
 /* AUTHOR */
 
 .author {
-  max-width: max-content;
+    margin: 0;
+}
 
-  margin: 0;
-  padding: 10px 0;
+/* PHOTO */
 
-  font-size: 20px;
+.photoLink {
+    order: -1;
+
+    grid-row: span 3;
 }
 
 /* PHOTO */
 
 .photo {
-  order: -1;
+    width: 100px;
+    height: 100px;
 
-  grid-row: span 3;
-
-  width: 100px;
-  height: 100px;
-
-  border-radius: 50%;
+    border-radius: 50%;
 }
 
 /* CONTENT */
 
 .content {
-  align-self: start;
+    align-self: start;
 
-  grid-column: 2;
+    grid-column: 2;
 
-  max-width: max-content;
+    max-width: max-content;
 
-  margin: 0;
-  padding: 5px 10px;
+    margin: 0;
+    padding: 5px 10px;
 
-  font-size: 18px;
-  color: var(--grey);
+    font-size: 18px;
+    color: var(--grey);
 }
 
 /* DATE TIME */
 
 .dateTime {
-  max-width: max-content;
+    max-width: max-content;
 
-  padding: 5px;
+    padding: 5px;
 
-  font-size: 14px;
-  color: var(--grey);
+    font-size: 14px;
+    color: var(--grey);
 }
 
 /* LIKE */
 
 .like {
-  grid-column: 2;
+    grid-column: 2;
 
-  justify-self: end;
-
-
+    justify-self: end;
 }
