Отправка, чтобы синхронизовать данные репозитория В файле addPost есть баг, возвращается не тот объект(?!?)

--- a/src/Components/MakeMessage/MakeMessage.module.css
+++ b/src/Components/MakeMessage/MakeMessage.module.css
@@ -1,43 +1,46 @@
 /* MAKE MESSAGE */
 
 .makeMessage {
-  display: grid;
+    display: grid;
 
-  row-gap: 10px;
-  column-gap: 5px;
+    row-gap: 10px;
+    column-gap: 5px;
 }
 
 /* NEW MESSAGE TEXT */
 
 .newMessageText {
-  resize: none;
+    resize: none;
 
-  margin: 0;
-  padding: 10px;
+    min-height: 70px;
+    height: min-content;
 
-  border: none;
+    margin: 0;
+    padding: 10px;
 
-  background-color: var(--white-lighter);
+    border: none;
 
-  font-size: 16px;
-  color: var(--grey);
+    background-color: var(--white-lighter);
 
-  filter: drop-shadow(1px 1px 1px var(--grey-light));
+    font-size: 16px;
+    color: var(--grey);
+
+    filter: drop-shadow(1px 1px 1px var(--grey-light));
 }
 
 .newMessageText::placeholder {
-  font-size: 16px;
-  color: var(--grey);
+    font-size: 16px;
+    color: var(--grey);
 }
 
 .newMessageText:focus {
-  outline-color: var(--blue);
-  outline-width: 3px;
+    outline-color: var(--blue);
+    outline-width: 3px;
 }
 
 /* BUTTON */
 
 .button {
-  justify-self: end;
-  align-self: start;
+    justify-self: end;
+    align-self: start;
 }
