Исправленна ошибка добавления поста и сообщения, добавленны outline'ы

--- a/src/Components/Like/Like.module.css
+++ b/src/Components/Like/Like.module.css
@@ -31,6 +31,10 @@
     background-size: 1.5em;
     background-repeat: no-repeat;
 }
+
+.input:focus-visible ~ .like {
+    outline: 2px solid var(--violet);
+}
 /* INPUT */
 
 .input {
