--- a/src/index.css
+++ b/src/index.css
@@ -1,60 +1,64 @@
 :root {
-  --white-lightest: rgb(255 255 255);
-  --white-lighter: rgb(245 245 245);
-  --white: rgb(230 230 230);
-  --grey-lighter: rgb(224 224 224);
-  --grey-light: rgb(192 192 192);
-  --grey: rgb(100 100 100);
-  --blue-lightest: rgb(212 217 255);
-  --blue-lighter: rgb(145 151 191);
-  --blue-light: rgb(88 115 235);
-  --blue: rgb(47 81 233);
-  --violet-lighter: rgb(243 184 243);
-  --violet: rgb(155 15 236);
-  --black: rgb(0 0 0);
+    --white-lightest: rgb(255 255 255);
+    --white-lighter: rgb(245 245 245);
+    --white: rgb(230 230 230);
+    --grey-lighter: rgb(224 224 224);
+    --grey-light: rgb(192 192 192);
+    --grey: rgb(100 100 100);
+    --blue-lightest: rgb(212 217 255);
+    --blue-lighter: rgb(145 151 191);
+    --blue-light: rgb(88 115 235);
+    --blue: rgb(47 81 233);
+    --violet-lighter: rgb(243 184 243);
+    --violet: rgb(155 15 236);
+    --black: rgb(0 0 0);
 }
 
 /* Класс временно заменяет отсутствующие фото нормально оформленным текстом */
 .fake-photo {
-  display: flex;
+    display: flex;
 
-  justify-content: center;
-  align-items: center;
+    justify-content: center;
+    align-items: center;
 
-  background-color: var(--blue-light);
+    background-color: var(--blue-light);
 
-  color: var(--white);
-  font-size: 12px;
-  text-align: center;
+    color: var(--white);
+    font-size: 12px;
+    text-align: center;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+*:focus-visible {
+    outline: 2px solid var(--violet) !important ;
 }
 
 body {
-  margin: 0;
+    margin: 0;
 
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 /* VISIBILITY HIDDEN */
 
 .visibility-hidden {
-  position: absolute;
+    position: absolute;
 
-  display: block;
+    display: block;
 
-  overflow: hidden;
+    overflow: hidden;
 
-  width: 1px;
-  height: 1px;
+    width: 1px;
+    height: 1px;
 
-  margin: -1px;
+    margin: -1px;
 
-  clip: rect(0, 0, 0, 0);
+    clip: rect(0, 0, 0, 0);
 }
