Переход на reducer'ы 1. Добавление reducer'а для добавления поста 2. Добавление reducer'а для ввода текста поста 3. Добавление reducer'а для постановки лайка 4. Добавление reducer'а для набирания сообщения в чате 5. Добавление reducer'а для отправки сообщения 6. state.posts теперь объект со списком постов и контентом нового поста 7. Список постов находится в поле state.posts.list

--- a/src/Components/MakePost/MakePost.module.css
+++ b/src/Components/MakePost/MakePost.module.css
@@ -1,6 +1,6 @@
 /* MAKE MESSAGE */
 
-.makeMessage {
+.form {
     display: grid;
 
     row-gap: 10px;
@@ -9,7 +9,7 @@
 
 /* NEW MESSAGE TEXT */
 
-.newMessageText {
+.textarea {
     resize: none;
 
     min-height: 70px;
@@ -28,12 +28,12 @@
     filter: drop-shadow(1px 1px 1px var(--grey-light));
 }
 
-.newMessageText::placeholder {
+.textarea::placeholder {
     font-size: 16px;
     color: var(--grey);
 }
 
-.newMessageText:focus {
+.textarea:focus {
     outline-color: var(--blue);
     outline-width: 3px;
 }
