Добавление страницы со всеми пользователями 1. Добавление страницы со всеми пользователями, но пока что там рисуются друзья 2. Добавлен кусок для карточки пользотеля в списке(к нему требуется добавить только нужные кнопки) 3. Добавлени псевдо кнопки 4. Вместо removeFriend теперь unfollowUser ПРОБЛЕМЫ: 1. Элементы страницы с пользователями и друзьями копируют друг друга всем, кроме одной кнопки

--- a/src/Components/Shared/UserCardParts/AboutUser/AboutUser.module.css
+++ b/src/Components/Shared/UserCardParts/AboutUser/AboutUser.module.css
@@ -3,8 +3,14 @@
 .aboutUser {
   display: grid;
 
+  grid-template-columns: minmax(max-content, 200px) 1fr;
+
+  column-gap: 10px;
   row-gap: 10px;
 
   align-items: end;
+
+  width: max-content;
+
   padding: 0;
 }
