Добавление страницы с пользователями и возможности удалять и добавлять пользователей в друзья 1. Добавление страницы со всеми пользователями 2. Добавление методов удаления/добавлние в друзья 3. Переработка store'а, теперь есть массив users, вместо friends, а все его элементы имею поле isFriend 4. Вынос списка пользователей и метода для его рендорига в папку Shared, на нем основываются все списки пользователей 5. Добавление атрибута render к компоненты UsersList, чтобы можно было прокинуть нужный для рендера элемент 6. Вынос карточки пользователя в папку Shared, на нем строятся большие карточки пользователей 7. Избавление от компонента UsersListCardPart из-за ненадобности 8. Небольшие изменения названий некоторых атрибутов и стилей

--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -32,12 +32,15 @@
 
 .main {
   grid-area: main;
+
+  padding-bottom: 50px;
 }
 
 /* LAST FRIENDS */
 
 .lastFriends {
   grid-area: friends;
+
   max-height: max-content;
 }
 
