--- a/src/Components/FavoritFriends/FavoritFriends.module.css
+++ b/src/Components/FavoritFriends/FavoritFriends.module.css
@@ -14,6 +14,18 @@
 
 /* FRIENDS LIST */
 
-.friendsList {
+.list {
+  display: grid;
+
+  grid-template-columns: repeat(3, 1fr);
+
+  row-gap: 10px;
+  column-gap: 10px;
+
+  width: 100%;
+
   margin: 0;
+  padding: 0;
+
+  list-style: none;
 }
