--- a/src/Components/Login/Login.module.css
+++ b/src/Components/Login/Login.module.css
@@ -1,41 +1,43 @@
 /* MAIN */
 
 .main {
-    display: grid;
+  display: grid;
 
-    grid-template-rows: repeat(2, min-content);
+  grid-template-rows: repeat(2, min-content);
 
-    justify-content: center;
+  justify-content: center;
 }
 
 /* HEADER */
 
 .header {
-    transform: translateX(50%);
+  transform: translateX(50%);
 }
 
 /* FORM */
 
 .form {
-    display: grid;
+  display: grid;
 
-    grid-template-columns: max-content auto;
+  grid-template-columns: max-content auto;
 
-    align-items: center;
+  align-items: center;
 
-    row-gap: 10px;
+  row-gap: 10px;
 
-    max-width: min-content;
+  max-width: min-content;
 }
 
 /* FIELD */
 
 .field {
-    grid-column: span 2;
+  grid-column: span 2;
 }
 
 /* BUTTON */
 
 .button {
-    justify-self: end;
+  width: max-content;
+
+  justify-self: end;
 }
