Изменение информации, выводимой в профиле и добавление димачиского профиля

--- a/src/Components/Shared/UserCardParts/Contacts/Contacts.module.css
+++ b/src/Components/Shared/UserCardParts/Contacts/Contacts.module.css
@@ -13,4 +13,16 @@
   width: max-content;
 
   padding: 0;
+  padding-left: 15px;
+}
+
+/* HEADER */
+
+.header {
+  grid-column: 1/-1;
+
+  margin-left: -15px;
+
+  font-size: 16px;
+  font-weight: 500;
 }
