--- a/src/Components/Users/PagesList/PagesList.module.css
+++ b/src/Components/Users/PagesList/PagesList.module.css
@@ -12,15 +12,16 @@
 .pageNumber {
   padding: 10px 20px;
 
-  font-size: 14px;
+  font-size: 12px;
 
-  border: 2px solid var(--blue);
+  border: 2px solid var(--blue-light);
 
   cursor: pointer;
 }
 
 .pageNumber:hover {
   background-color: var(--blue);
+  border-color: var(--blue);
 
   color: #fff;
 }
@@ -28,7 +29,29 @@
 /* SELECTED */
 .selected {
   background-color: var(--blue);
+  border-color: var(--blue);
 
   font-weight: 700;
   color: #fff;
+}
+
+/* BUTTON */
+
+.button {
+  background-color: var(--white);
+
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+  border: 2px solid var(--blue-light);
+
+  font-size: 12px;
+  color: #000;
+  box-shadow: none;
+  transition: none;
+}
+
+.button:hover,
+.button:active {
+  color: var(--white);
 }
