Добавление своей страницы и добавления\удаления из друзей 1. Добавление страницы для авторизованного пользователя 2. Добавление возможности удалять или добавлять в друзья 3. Добавление проверки на аутенфикацию в стистеме, при ее отсутствие бросает на страницу входа Что стоит доделать\изменить 1. Изменить расположение файлов в папке Profile, возможно компонента Me не должна лежать там и так называться 2. Сделать логинизацию 3. Сделать список друзей

--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -16,6 +16,10 @@
   max-width: 1580px;
 }
 
+.notLoginPage {
+  grid-template-areas: "header header" "main main" "main main" "main main";
+}
+
 /* HEADER */
 
 .header {
