Вынос асинхронных операций в thunk и вынос индикаторов загрузки в отдельный раздел состояния 1. Переход на использоание thunk'ов и переписывание кода под них 2. Вынос индикаторов загрузки каких либо разделов в отдельную часть state'а 3. Добавлени методов ЖЦ к странице профиля, для динамической отрисовки пользовательских профелей 4. Перенос профилей пользователей с адреса \users\id на \profile\id В планах 1. Изменить навигацию по страницам друзей и пользователей 2. Добавить поиск по имени 3. Способ изменения количесва пользователей на странице

--- a/src/Components/Shared/UsersListItem/UsersListItem.module.css
+++ b/src/Components/Shared/UsersListItem/UsersListItem.module.css
@@ -12,11 +12,10 @@
   list-style: none;
 }
 
-/* ITEM */
+/* STATUS */
 
-.item {
-  grid-column: 1;
-  grid-row: 1 / -1;
+.status {
+  grid-column: 2;
 }
 
 /* PHOTO */
@@ -24,7 +23,7 @@
 .photo {
   order: -1;
 
-  grid-row: span 3;
+  grid-row: 1/-1;
 
   width: 120px;
   height: 170px;
@@ -32,8 +31,7 @@
 
 /* ABOUT USER */
 
-.aboutUser {
-  grid-row: 2;
+.contacts {
   grid-column: 2;
 }
 
@@ -41,7 +39,7 @@
 
 .link {
   grid-column: -1;
-  grid-row: -3;
+  grid-row: -1;
 }
 
 /* BUTTON */
