--- a/src/Components/Shared/AddLoading/Loading/Loading.module.css
+++ b/src/Components/Shared/AddLoading/Loading/Loading.module.css
@@ -11,7 +11,7 @@
 
 .wrapper {
   position: relative;
-  z-index: 1;
+  z-index: 20;
 
   display: flex;
 
@@ -21,21 +21,23 @@
   width: 100%;
   height: 100%;
 
-  background-color: var(--grey-lightest);
+  background-color: var(--white-lightest);
 }
 
 .loading {
-  width: 150px;
-  height: 150px;
+  width: 120px;
+  height: 120px;
 
   animation-name: spin;
   animation-iteration-count: infinite;
-  animation-duration: 2.5s;
+  animation-duration: 1.5s;
   animation-timing-function: linear;
 
   border-radius: 50%;
-  border: 6px dashed var(--blue);
-  border-right-width: 8px;
-  border-left-width: 1px;
-  border-bottom-color: transparent;
+  border: 2px solid var(--blue-lighter);
+
+  border-bottom-color: var(--blue);
+  border-bottom-width: 6px;
+
+  background-color: var(--white-lightest);
 }
