Теперь есть вход и статус 1. Добавление отображение и возможности изменять статус 2. Добавление рабочего входа в аккаунт Нужно: 1. Сделать страницу с "настройками" 2. Сделать страницу с "музыкой" 3. Сделать ревью проекту, избавить от лшнего кода, поторобовать оптимизировать компоненты 4. Сделать капчу 5. Доделать дизайн модального окна 6. Сделать загрузку фото

--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,39 +1,60 @@
 /* HEADER */
 
 .header {
-  display: flex;
+	display: flex;
 
-  align-items: center;
-  justify-content: space-between;
+	align-items: center;
+	justify-content: space-between;
 
-  padding: 0 20px;
+	padding: 0 20px;
 
-  min-height: 50px;
+	min-height: 50px;
 
-  background-color: var(--blue-light);
+	background-color: var(--blue-light);
 }
 
 /* LOGO */
 
 .logo {
-  width: 120px;
+	width: 120px;
 }
 
 /* AUTHORIZATION */
 
 .authorization {
-  font-size: 14px;
-  color: var(--white-lighter);
+	font-size: 14px;
+	color: var(--white-lighter);
 }
 
 /* LINK */
 
 .link {
-  line-height: 1em;
-  text-decoration: none;
-  color: var(--white-lighter);
+	line-height: 1em;
+	text-decoration: none;
+	color: var(--white-lighter);
 }
 
 .link:hover {
-  text-decoration: underline;
+	text-decoration: underline;
+}
+
+/* LOGOUT */
+
+.logout {
+	max-width: min-content;
+
+	background-color: transparent;
+
+	font-size: 14px;
+
+    padding: 0;
+
+	transition: none;
+}
+
+.logout:hover,
+.logout:active {
+	background-color: transparent;
+
+	text-decoration: underline;
 }
