--- a/src/Components/Shared/PagesList/PagesList.module.css
+++ b/src/Components/Shared/PagesList/PagesList.module.css
@@ -1,57 +1,67 @@
 /* PAGES LIST */
 .pagesList {
-  display: flex;
+	display: flex;
 
-  column-gap: 10px;
+	column-gap: 10px;
 
-  list-style: none;
+	list-style: none;
 }
 
 /* PAGE NUMBER */
 
 .pageNumber {
-  padding: 10px 20px;
+	font-size: 12px;
 
-  font-size: 12px;
-
-  border: 2px solid var(--blue-light);
-
-  cursor: pointer;
+	border: 2px solid var(--blue-light);
 }
 
 .pageNumber:hover {
-  background-color: var(--blue);
-  border-color: var(--blue);
+	background-color: var(--blue);
+	border-color: var(--blue);
 
-  color: #fff;
+	color: #fff;
 }
 
 /* SELECTED */
 .selected {
-  background-color: var(--blue);
-  border-color: var(--blue);
+	background-color: var(--blue);
+	border-color: var(--blue);
 
-  font-weight: 700;
-  color: #fff;
+	font-weight: 700;
+	color: #fff;
+}
+
+/* LINK */
+
+.link {
+	display: inline-block;
+
+	padding: 10px 20px;
+
+	width: 100%;
+	height: 100%;
+
+	text-decoration: none;
+	color: inherit;
 }
 
 /* BUTTON */
 
 .button {
-  background-color: var(--white);
+	background-color: var(--white);
 
-  padding-top: 10px;
-  padding-bottom: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 
-  border: 2px solid var(--blue-light);
+	border: 2px solid var(--blue-light);
 
-  font-size: 12px;
-  color: #000;
-  box-shadow: none;
-  transition: none;
+	font-size: 12px;
+	color: #000;
+	box-shadow: none;
+	transition: none;
 }
 
 .button:hover,
 .button:active {
-  color: var(--white);
+	color: var(--white);
 }
